# rust-aws-lambda-tutorial

./: .gitignore  README.md
.github/workflows/: basic-function-pipeline.yml  rust-crud-pipeline.yml
basic-function/: Cargo.toml
rust-crud/: cdk.json  package-lock.json  package.json
rust-crud/lambda-functions/create-user/: Cargo.toml
rust-crud/lambda-functions/create-user/src/: main.rs
rust-crud/lambda-functions/delete-user/: Cargo.toml
rust-crud/lambda-functions/get-user/: Cargo.toml
rust-crud/lambda-functions/update-user/: Cargo.toml
rust-crud/lib/: rust-crud-stack.js
rust-crud/test/: rust-crud.test.js
rust_crud/: api_gateway.tf  lambdas.tf  main.tf  outputs.tf  rust_build.py  variables.tf
rust_crud/lambda_functions/create_user/: Cargo.toml
rust_crud/lambda_functions/delete_user/: Cargo.toml
rust_crud/lambda_functions/get_user/: Cargo.toml
rust_crud/lambda_functions/get_user/src/: main.rs
rust_crud/lambda_functions/update_user/: Cargo.toml
rust_crud/users/: Cargo.toml
rust_crud/users/src/lib/: environment.rs
